# ollero-agent

./: Cargo.toml  OLLERO_JUSTIFICATION.md  README.md  SUMMARY.md  TASKS_OLLERO_TOOL_ACTIONS.md
.github/workflows/: deploy.yml
docs/: Gemfile  _config.yml
docs/architecture/: extending-tools.md  index.md  orchestra.md
docs/dev/: validation.md
docs/guides/: index.md  orchestra-mode.md
scripts/: master-automejora.ts  ollero-cli.ts  run-task-queue.ts
src/: doctor.rs  main.rs
src/compression/: mod.rs
src/config/: mod.rs
src/input/: mod.rs
src/ollama/: client.rs  types.rs
src/orchestra/: alf.rs  diagnoser.rs  driver.rs  keywords.rs  mod.rs  planner.rs  store.rs  types.rs  worker.rs
src/orchestra/validator/: auto.rs  mod.rs
src/orchestra/validator/checks/: content.rs  cross_file.rs  execution.rs  manual.rs  mod.rs  structural.rs  syntax.rs
src/permissions/: mod.rs
src/repl/: auto_scan.rs  banner.rs  chat_only.rs  markdown.rs  mod.rs
src/setup/: mod.rs
src/tools/: bash.rs  edit_file.rs  glob_tool.rs  grep_tool.rs  mod.rs  read_file.rs  tree.rs  write_file.rs
src/tui/: app.rs  mod.rs
src/tui/widgets/: chat_panel.rs  input_area.rs  status_bar.rs
src/workspace/: mod.rs
tests/: compression_demo.rs
validation/: generated-prompts.txt
