[package]
name = "allux"
version = "0.1.0"
edition = "2021"
description = "Local code agent powered by Ollama"
authors = ["MarvinQuevedo"]
license = "GPL-3.0-or-later"

[[bin]]
name = "allux"
path = "src/main.rs"

[dependencies]
# HTTP client with streaming
sysinfo = "0.30"
# HTTP client with streaming
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async streams
futures = "0.3"
# Error handling
anyhow = "1"
# Terminal colors (before TUI)
colored = "2"
# Config dirs
dirs = "5"
# Glob pattern matching (for glob tool)
glob = "0.3"
# Regex (for grep tool)
regex = "1"
# Temp files (used in tests)
tempfile = "3"
# Config file (TOML)
toml = "0.8"
# Terminal input (arrow keys, raw mode) — also used later for TUI
crossterm = "0.28"
# TUI framework (uses crossterm backend)
ratatui = "0.29"
# Multi-line text input widget for ratatui
tui-textarea = "0.7"
# Unicode display width (for text selection mapping)
unicode-width = "0.2"
pulldown-cmark = "0.12"
indicatif = "0.17"
tokio-util = { version = "0.7", features = ["codec"] }
# Rust AST parsing for syntax validation (Orchestra validator)
syn = { version = "2", features = ["full", "parsing"] }
# Compression for loop-repetition detection (Orchestra validator)
zstd = "0.13"
# Low-level OS primitives (PID alive check for store lock)
libc = "0.2"

[profile.release]
opt-level = 3
strip = true
lto = true
